--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
         justify-content: center;
         align-items: center;
         font-family: 'Red Hat Display';
+        overflow-x:hidden;
     }
     
     .main-image {
